 * Added get_next_id method to session to create unique id's in the
    HTML page.

2006-07-07 moj

 * Workflow now runs update_from_form on stages
 * Added validate/update_from_form to stage
 * Surround now handles ->{problems}
 * Created UploadComponent for file uploads
 * New methods in Component: update_from_form, validate, params/param
    (to get component-specific parameters), and get_problems

2006-07-13 cjg

 * Added URIs to all plugins
 * More work on eprint control page. Not complete, but much progress.
 * Moved around the interface code to make better use of inheritance.

2006-07-14 cjg

 * More development on new user interface. The interface is no longer
    staff or not staff, that's a property of the screen or tab.

2006-07-19 cjg

 * Fixed template - search was hardlinked to flag.ecs
 * Added $session->render_tabs plus a javascript function to support it.

2006-07-21 cjg

 * Removed workflow->process as it's not used any more.
 * Added Home as a screen in the interface. Currently home is the deposit
    screen, but it will probably become a jump-off screen to take you to
    the first tool you can use. The current code will probably become
    "Deposit".
 * Deposit tool now shows all owned eprints in any dataset (will be 
    filter-able later)
 * Removed user-page layout stuff from phrases.
 * Renamed the action phrases to have a logical set of ids for names and
    help text.
 * Tweaked workflow demo to use an eprintid on my machine and handle the
    changes to workflow.pm
 * Shortend the names of the workflow stages
 * Improved MetaField::Set to handle null defaults in the input renderer.
 * Many more changes to the user Interface modules, including addin a 
    new view of eprints for non-owner, non-editors. Making the views all
    subclass EPrint::View. Making EPrint::View make a redirect to a 
    sensible view. Adding a wrapper for all logged in pages, and a weapper
    for pages dealing with a single eprint record.
 
